# sophy

./: .gitmessage  CONTRIBUTING.md  Cargo.toml  DOCS_GUIDE.md  GIT_WORKFLOW_GUIDE.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  QUICK_GIT_COMMANDS.md  README.md  SPECIAL_FUNCTIONS_IMPLEMENTATION.md  makefile
.github/workflows/: rust.yml
sophi-cli/: Cargo.toml
sophi-cli/src/: main.rs
sophi-lib/: Cargo.toml
sophi-lib/src/: lib.rs
sophi-lib/src/base/: numbers.rs
sophi-lib/src/functions/: exp.rs  mod.rs
sophi-lib/src/methods/: mod.rs  raphson.rs
sophy-cli/: Cargo.toml
sophy-cli/src/: main.rs
sophy-lib/: Cargo.toml  README.md
sophy-lib/examples/: comprehensive.rs  special_functions.rs
sophy-lib/src/: lib.rs
sophy-lib/src/base/: mod.rs  numbers.rs
sophy-lib/src/methods/: mod.rs  raphson.rs
sophy-lib/src/specials/: erf.rs  eta.rs  gamma.rs  mod.rs  sigma.rs  zeta.rs
