[package]
name = "sophi"
version = "0.1.15"
edition = "2024"
authors = ["ReinanBr"]
description = "Math Physics library in rust"
license = "MIT"
homepage = "https://github.com/reinanbr/sophi"
repository = "https://github.com/reinanbr/sophi"
readme = "README.md"
keywords = ["math", "physics", "rust"]
[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]


[dependencies]
