[package]
name = "sophi"
version = "0.1.22"
edition = "2024"
authors = ["ReinanBr"]
description = "Math Physics library in rust"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/reinanbr/sophi"
repository = "https://github.com/reinanbr/sophi"
readme = "README.md"
[lib]
name = "sophi"
path = "src/lib.rs"



[dependencies]
